--- a/views/character_new.jade
+++ b/views/character_new.jade
@@ -2,10 +2,23 @@ h1= title
 form(method = "post")
     div
         div
-            span Name:
-            input(type="text", name="name", id="editCharacterName")
+            label Name:
+                input(type="text", name="name")
         div
-            span Clan:
-            input(type="text", name="clan", id="editCharacterClan")
+            label Clan:
+                input(type="text", name="clan")
+        div
+            label Bloodline:
+                input(type="text", name="bloodline")
+        div
+            label Virtue:
+                select(name="virtue")
+                    - each virtue in virtues
+                      option(value="#{virtue}") #{virtue}
+        div
+            label Vice:
+                select(name="vice")
+                    - each vice in vices
+                      option(value="#{vice}") #{vice}
         div#editCharacterSubmit
             input(type="submit", value="Send")
