--- a/views/character_new.jade
+++ b/views/character_new.jade
@@ -3,7 +3,7 @@ form(method = "post")
     div
         div
             label Name:
-                input(type="text", name="name")
+                input(type="text", name="character[name]")
         div
             label Clan:
                 select(name="clan")
@@ -11,15 +11,15 @@ form(method = "post")
                       option(value="#{clan}")= clan
         div
             label Bloodline:
-                input(type="text", name="bloodline")
+                input(type="text", name="character[bloodline]")
         div
             label Virtue:
-                select(name="virtue")
+                select(name="character[virtue]")
                     - each virtue in virtues
                       option(value="#{virtue}")= virtue
         div
             label Vice:
-                select(name="vice")
+                select(name="character[vice]")
                     - each vice in vices
                       option(value="#{vice}")= vice
         div.attributes
@@ -27,16 +27,38 @@ form(method = "post")
                 - attributes = ["intelligence", "wits", "resolve"]
                 - each attribute in attributes
                   label #{attribute}:
-                      input(type="number", min="1", max="5", step="1", value="1", name="attributes.#{attribute}")
+                      input(type="number", min="1", max="5", step="1", value="1", name="character[attributes][#{attribute}]")
             div.attributes-physical
                 - attributes = ["strength", "dexterity", "stamina"]
                 - each attribute in attributes
                   label #{attribute}:
-                      input(type="number", min="1", max="5", step="1", value="1", name="attributes.#{attribute}")
+                      input(type="number", min="1", max="5", step="1", value="1", name="character[attributes][#{attribute}]")
             div.attributes-social
                 - attributes = ["presence", "manipulation", "composure"]
                 - each attribute in attributes
                   label #{attribute}:
-                      input(type="number", min="1", max="5", step="1", value="1", name="attributes.#{attribute}")
+                      input(type="number", min="1", max="5", step="1", value="1", name="character[attributes][#{attribute}]")
+        div.skills
+            div.skills-mental
+                - skills = ["academics", "computer", "crafts", "investigation", "medicine", "occult", "politics", "science"]
+                - each skill in skills
+                  label #{skill}:
+                      input(type="number", min="0", max="5", step="1", value="0", name="character[skills][#{skill}]")
+            div.skills-physical
+                - skills = ["athletics", "brawl", "drive", "firearms", "larceny", "stealth", "survival", "weaponry"]
+                - each skill in skills
+                  label #{skill}:
+                      input(type="number", min="0", max="5", step="1", value="0", name="character[skills][#{skill}]")
+            div.skills-mental
+                - skills = ["animalKen", "empathy", "expression", "intimidation", "persuasion", "socialize", "streetwise", "subterfuge"]
+                - each skill in skills
+                  label #{skill}:
+                      input(type="number", min="0", max="5", step="1", value="0", name="character[skills][#{skill}]")
+        div.merits
+            div.merit(data-action="merit-filler")
+                label Merit:
+                input(type="text", name="character[merit][n1][name]")
+                input(type="text", name="character[merit][n1][description]")
+                input(type="number", min="0", max="5", step="1", name="character[merit][n1][value]")
         div#editCharacterSubmit
             input(type="submit", value="Send")
